--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body >
+    <p>M.Hashim</p>
     <div class="stopwatch-background">
         <div class="stopwatch-container">
             <h1>Stopwatch</h1>
